# study-paddle

./: BUILD.md  README.md
inference_by_cpp/start_simple_lr/: CMakeLists.txt  native_main.cc
python_scripts/: simple_lr.py
python_scripts/train_parameters/: __model__  fc_0.b_0  fc_0.w_0
